--- a/dshop/templates/theme/default/catalog/productvariable-detail.html
+++ b/dshop/templates/theme/default/catalog/productvariable-detail.html
@@ -134,17 +134,17 @@
                   </div>
                 </div>
                 {% if is_quotation %}
-                <div class="cart_btn" style="display:{% if product.variants.first and product.variants.first.quantity == 0 %}none{% else %}block{% endif %};">
-                  <a href="#" class="btn btn-fill-out btn-add2quotation dm-add2quotation-variant{% if not product.variants.first %}disabled{% endif %}" data-product="{{product.slug}}" data-quantity="1" data-variant="{{product.variants.first.product_code}}">
-                    <i class="icon-basket-loaded"></i>{% trans "Add to quotation" %}
-                  </a>
-                </div>
+                  <div class="cart_btn" style="display:block;">
+                    <a href="#" class="btn btn-fill-out btn-add2quotation dm-add2quotation-variant{% if not product.variants.first %}disabled{% endif %}" data-product="{{product.slug}}" data-quantity="1" data-variant="{{product.variants.first.product_code}}">
+                      <i class="icon-basket-loaded"></i>{% trans "Add to quotation" %}
+                    </a>
+                  </div>
                 {% else %}
-                <div class="cart_btn" style="display:{% if product.variants.first and product.variants.first.quantity == 0 %}none{% else %}block{% endif %};">
-                  <a href="#" class="btn btn-fill-out btn-add2cart dm-add2cart-variant{% if not product.variants.first %}disabled{% endif %}" data-product="{{product.slug}}" data-quantity="1" data-variant="{{product.variants.first.product_code}}">
-                    <i class="icon-basket-loaded"></i>{% trans "Add to cart" %}
-                  </a>
-                </div>
+                  <div class="cart_btn" style="display:{% if product.variants.first and product.variants.first.quantity == 0 %}none{% else %}block{% endif %};">
+                    <a href="#" class="btn btn-fill-out btn-add2cart dm-add2cart-variant{% if not product.variants.first %}disabled{% endif %}" data-product="{{product.slug}}" data-quantity="1" data-variant="{{product.variants.first.product_code}}">
+                      <i class="icon-basket-loaded"></i>{% trans "Add to cart" %}
+                    </a>
+                  </div>
                 {% endif %}
                 <div class="product-detail-unavailable" style="display:{% if product.variants.first and product.variants.first.quantity == 0 %}block{% else %}none{% endif %};">
                     <p>{% trans 'Out of stock' %}</p>
