--- a/dshop/templates/theme/default/catalog/productdefault-detail.html
+++ b/dshop/templates/theme/default/catalog/productdefault-detail.html
@@ -83,13 +83,16 @@
                         <span class="product-detail-customlabel" style="background-color:{{ product.label.bg_colour }};border-color:{{ product.label.colour }};color:{{ product.label.colour }};">{{ product.label.name }}</span>
                     {% endif %}
                 </h4>
-                <div class="product_price">
-                    {% product_discount_price product.id as real_price %}
-                    <span class="price">{{real_price}}</span>
-                    {% if real_price != product.unit_price %}
-                        <del>{{product.unit_price}}</del>
-                    {% endif %}
-                </div>
+                {% dm_quotation_feature as is_quotation %}
+                {% if not is_quotation %}
+                    <div class="product_price">
+                        {% product_discount_price product.id as real_price %}
+                        <span class="price">{{real_price}}</span>
+                        {% if real_price != product.unit_price %}
+                            <del>{{product.unit_price}}</del>
+                        {% endif %}
+                    </div>
+                {% endif %}
                 <div class="pr_desc">
                     {% if product.caption %}
                         {{product.caption|safe}}
@@ -168,51 +171,51 @@
                     <div class="item">
                     <div class="product">
                         <div class="product_img">
-                        <a href="{{related.get_absolute_url}}">
-                            {% if related.main_image %}
-                            {% thumbnail related.main_image 540x600 background="#ffffff" upscale as thumb %}
-                            <img src="{{thumb.url}}" alt="product_img1" />
-                            {% else %}
-                                <img src="https://via.placeholder.com/540x600/ececec/ececec" alt="{{related.product_name}}" />
-                            {% endif %}
-                        </a>
-                        <div class="product_action_box">
-                            <ul class="list_none pr_action_btn">
-                            <li><a href="{{related.get_absolute_url}}"><i class="ti-info-alt"></i></a></li>
-                            {% if not related.variants and related.quantity > 0 %}
-                                <li>
-                                    <a href="/" onclick="dm_add2cart($(this)); return false" data-product="{{related.slug}}"><i class="icon-basket-loaded"></i></a>
-                                </li>
-                            {% elif related.variants and related.variants.count == 1 %}
-                                <li>
-                                    <a href="/" onclick="dm_add2cart_variant($(this)); return false" data-product="{{related.slug}}" data-variant="{{related.variants.first.product_code}}"><i class="icon-basket-loaded"></i></a>
-                                </li>
-                            {% endif %}
-                            </ul>
-                        </div>
+                            <a href="{{related.get_absolute_url}}">
+                                {% if related.main_image %}
+                                {% thumbnail related.main_image 540x600 background="#ffffff" upscale as thumb %}
+                                <img src="{{thumb.url}}" alt="product_img1" />
+                                {% else %}
+                                    <img src="https://via.placeholder.com/540x600/ececec/ececec" alt="{{related.product_name}}" />
+                                {% endif %}
+                            </a>
+                            <div class="product_action_box">
+                                <ul class="list_none pr_action_btn">
+                                <li><a href="{{related.get_absolute_url}}"><i class="ti-info-alt"></i></a></li>
+                                {% if not related.variants and related.quantity > 0 %}
+                                    <li>
+                                        <a href="/" onclick="dm_add2cart($(this)); return false" data-product="{{related.slug}}"><i class="icon-basket-loaded"></i></a>
+                                    </li>
+                                {% elif related.variants and related.variants.count == 1 %}
+                                    <li>
+                                        <a href="/" onclick="dm_add2cart_variant($(this)); return false" data-product="{{related.slug}}" data-variant="{{related.variants.first.product_code}}"><i class="icon-basket-loaded"></i></a>
+                                    </li>
+                                {% endif %}
+                                </ul>
+                            </div>
                         </div>
                         <div class="product_info">
-                        <h6 class="product_title"><a href="{{related.get_absolute_url}}">{{related.product_name|truncatechars:45}}</a></h6>
-                        <div class="product_price">
-                            {% if related.variants %}
-                            {% product_variant_discount_price related.variants.first.id as real_price %}
-                            <span class="price">{{real_price}}</span>
-                            {% if real_price != related.variants.first.unit_price %}
-                                <del>{{related.variants.first.unit_price}}</del>
-                            {% endif %}
-                            {% else %}
-                            {% product_discount_price related.id as real_price %}
-                            <span class="price">{{real_price}}</span>
-                            {% if real_price != related.unit_price %}
-                                <del>{{related.unit_price}}</del>
-                            {% endif %}
-                            {% endif %}
-                            {% if related.quantity == 0 %}
-                            <span class="product_sale_outofstock">{% trans "Out of stock" %}</span>
-                            {% elif related.is_discounted %}
-                            <span class="product_sale_discounted">{% trans "Discounted" %}</span>
-                            {% endif %}
-                        </div>
+                            <h6 class="product_title"><a href="{{related.get_absolute_url}}">{{related.product_name|truncatechars:45}}</a></h6>
+                            <div class="product_price">
+                                {% if related.variants %}
+                                {% product_variant_discount_price related.variants.first.id as real_price %}
+                                <span class="price">{{real_price}}</span>
+                                {% if real_price != related.variants.first.unit_price %}
+                                    <del>{{related.variants.first.unit_price}}</del>
+                                {% endif %}
+                                {% else %}
+                                {% product_discount_price related.id as real_price %}
+                                <span class="price">{{real_price}}</span>
+                                {% if real_price != related.unit_price %}
+                                    <del>{{related.unit_price}}</del>
+                                {% endif %}
+                                {% endif %}
+                                {% if related.quantity == 0 %}
+                                <span class="product_sale_outofstock">{% trans "Out of stock" %}</span>
+                                {% elif related.is_discounted %}
+                                <span class="product_sale_discounted">{% trans "Discounted" %}</span>
+                                {% endif %}
+                            </div>
                         </div>
                     </div>
                     </div>
