--- a/dshop/templates/theme/default/catalog/productvariable-detail.html
+++ b/dshop/templates/theme/default/catalog/productvariable-detail.html
@@ -89,7 +89,7 @@
                         <span class="product-detail-customlabel" style="background-color:{{ product.label.bg_colour }};border-color:{{ product.label.colour }};color:{{ product.label.colour }};">{{ product.label.name }}</span>
                     {% endif %}
                 </h4>
-                {% dm_quotation_feature product.variants.first as is_quotation %}
+                {% dm_quotation_feature as is_quotation %}
                 {% if not is_quotation %}
                   <div class="product_price">
                     {% if product.variants.first %}
