--- a/dshop/static/dshop/css/dmodules.css
+++ b/dshop/static/dshop/css/dmodules.css
@@ -588,31 +588,26 @@ main > .container > .row {
   font-weight:400;
   line-height:120%;
 }
-.dm-drawer-inner #drawer-items-list .col-3 {
+.dm-drawer-inner .drawer-items-list .col-3 {
     padding-right: 0;
 }
-.dm-drawer-inner #drawer-items-list ul{
+.dm-drawer-inner .drawer-items-list ul{
   list-style:none;
 }
-.dm-drawer-inner #drawer-items-list li,
-.dm-drawer-inner #drawer-soumission-list li{
+.dm-drawer-inner .drawer-items-list li{
   padding:1rem 0;
 }
-.dm-drawer-inner #drawer-items-list li + li,
-.dm-drawer-inner #drawer-soumission-list li + li{
+.dm-drawer-inner .drawer-items-list li + li{
   border-top:1px solid rgba(150, 140, 173, 0.2);
 }
-.dm-drawer-inner #drawer-items-list .media img,
-.dm-drawer-inner #drawer-soumission-list .media img{
+.dm-drawer-inner .drawer-items-list .media img{
   max-width:100%;
   height:auto;
 }
-.dm-drawer-inner #drawer-items-list .media-body,
-.dm-drawer-inner #drawer-soumission-list .media-body{
+.dm-drawer-inner .drawer-items-list .media-body{
   display:none;
 }
-.dm-drawer-inner #drawer-items-list .col-8 a,
-.dm-drawer-inner #drawer-soumission-list .col-8 a{
+.dm-drawer-inner .drawer-items-list .col-8 a{
   color:#41b6e6;
   font-size:1rem;
   font-weight:800;
@@ -624,11 +619,10 @@ main > .container > .row {
   transition:color 0.3s;
   margin: 0;
 }
-.dm-drawer-inner #drawer-items-list a:hover,
-.dm-drawer-inner #drawer-soumission-list a:hover{
+.dm-drawer-inner .drawer-items-list a:hover{
   color:#000;
 }
-.dm-drawer-inner #drawer-items-list .drawer-cart-attributes {
+.dm-drawer-inner .drawer-items-list .drawer-cart-attributes {
     font-size: 0.8rem;
     margin: 0 0 0.5rem;
 }
@@ -652,16 +646,14 @@ main > .container > .row {
   font-size:20px;
   text-align:right;
 }
-.dm-drawer-inner #drawer-items-list a.dm-item-delete,
-.dm-drawer-inner #drawer-soumission-list a.dm-item-delete{
+.dm-drawer-inner .drawer-items-list a.dm-item-delete{
   color:#41b6e6;
   position:absolute;
   top:0;
   right:-18px;
   padding:2px 10px;
 }
-.dm-drawer-inner #drawer-items-list a.dm-item-delete:hover,
-.dm-drawer-inner #drawer-soumission-list a.dm-item-delete:hover{
+.dm-drawer-inner .drawer-items-list a.dm-item-delete:hover,{
   color:#000;
 }
 .dm-drawer-user-logs .default-input{
