--- a/dshop/templates/dshop/pages/drawer-quotation.html
+++ b/dshop/templates/dshop/pages/drawer-quotation.html
@@ -1,8 +1,8 @@
 {% load i18n %}
 
 <div class="dm-drawer-inner">
-  <h2 class="drawer-title">{% trans "My Quotation" %}<span class="drawer-count">, <span id="drawer-items-count">0 {% trans "product" %}</span></span></h2>
-  <div id="drawer-items-list"></div>
+  <h2 class="drawer-title">{% trans "My Quotation" %}<span class="drawer-count">, <span id="drawer-quotation-items-count">0 {% trans "product" %}</span></span></h2>
+  <div class="drawer-items-list" id="drawer-quotation-items-list"></div>
 </div>
 <div class="dm-drawer-bottom">
   <a href="/commande/devis" class="btn btn-fill-out d-block btn-order">{% trans "Send" %}</a>
