--- a/dshop/templates/dshop/pages/drawer-quotation.html
+++ b/dshop/templates/dshop/pages/drawer-quotation.html
@@ -5,5 +5,5 @@
   <div class="drawer-items-list" id="drawer-quotation-items-list"></div>
 </div>
 <div class="dm-drawer-bottom">
-  <a href="/commande/devis" class="btn btn-fill-out d-block btn-order">{% trans "Send" %}</a>
+    <a href="/commande/{% trans 'slugquotation' %}" class="btn btn-fill-out d-block btn-order">{% trans "Send" %}</a>
 </div>
