--- a/dshop/templates/dshop/pages/drawer-user.html
+++ b/dshop/templates/dshop/pages/drawer-user.html
@@ -15,7 +15,7 @@
                     </li>
                 {% else %}
                     <li>
-                        <a href="/commande/quotations/">{% trans 'My Quotations' %}</a>
+                        <a href="/commande/{% trans 'slugmyquotations' %}/">{% trans 'My Quotations' %}</a>
                     </li>
                 {% endif %}
                 <li>
