--- a/dshop/templates/theme/default/catalog/productdefault-detail.html
+++ b/dshop/templates/theme/default/catalog/productdefault-detail.html
@@ -113,7 +113,7 @@
                     </div>
                     {% if is_quotation %}
                         <div class="cart_btn">
-                            <a href="#" class="btn btn-fill-out btn-add2quotation dm-add2quotation" data-product="{{product.slug}}" data-quantity="1">
+                            <a href="#" class="btn btn-fill-out btn-add2quotation dm-add2quotation" data-productcode="{{product.product_code}}" data-product="{{product.slug}}" data-quantity="1">
                                 <i class="icon-basket-loaded"></i>{% trans "Add to quotation" %}
                             </a>
                         </div>
