Test case and text correct

--- a/dshop/templates/theme/default/email/quotation-detail.html
+++ b/dshop/templates/theme/default/email/quotation-detail.html
@@ -18,7 +18,7 @@
 {% block email-order-head %}
     <caption style="font-weight: bold; font-size: 130%; padding: 20px 0 10px; text-align: center;">
         {% block email-order-caption %}
-            {% blocktrans with quotation_number=quotation.number %}Summary of Quotation {{ quotation_number }}{% endblocktrans %}
+            {% blocktrans with quotation_number=quotation.number %}Résumé de la soumission {{ quotation_number }}{% endblocktrans %}
         {% endblock %}
 	</caption>
 	<thead>
