--- a/dshop/templates/theme/default/plugins/products-by-category.html
+++ b/dshop/templates/theme/default/plugins/products-by-category.html
@@ -1,7 +1,9 @@
 {% load static thumbnail cms_tags i18n dshop_tags dmrabais_tags %}
 
+{% dm_quotation_feature as is_quotation %}
+
 {% if instance.bg_image %}
-{% thumbnail instance.bg_image "2000x900" as thumb %}
+    {% thumbnail instance.bg_image "2000x900" as thumb %}
 {% endif %}
 
 <!-- BEGIN: par catégorie -->
@@ -30,7 +32,7 @@
                         {% dm_get_categories_parents as categories %}
                             {% for category in categories %}
                             <li class="nav-item">
-                                <a class="nav-link pbc-tab{% if forloop.first %}  active{% endif %}" id="tab{{forloop.counter}}-tab" data-toggle="tab" href="#tab{{forloop.counter}}" role="tab" aria-controls="tab{{forloop.counter}}" onclick="pbc_tab({{category.pk}}, {{forloop.counter}});" aria-selected="true">{{category.name}}</a>
+                                <a class="nav-link pbc-tab{% if forloop.first %}  active{% endif %}" id="tab{{forloop.counter}}-tab" data-toggle="tab" href="#tab{{forloop.counter}}" role="tab" aria-controls="tab{{forloop.counter}}" onclick="loadMoreByCategory({{category.pk}}, {{forloop.counter}});" aria-selected="true">{{category.name}}</a>
                             </li>
                         {% endfor %}
                     </ul>
@@ -63,11 +65,27 @@
                                                             </li>
                                                             {% if not product.variants and product.quantity > 0 %}
                                                                 <li>
-                                                                    <a href="/" onclick="dm_add2cart($(this)); return false" data-product="{{product.slug}}"><i class="icon-basket-loaded"></i></a>
+                                                                    {% if is_quotation %}
+                                                                        <a href="#" onclick="dm_add2quotation($(this)); return false" data-product="{{product.product_code}}">
+                                                                            <i class="icon-basket-loaded"></i>
+                                                                        </a>
+                                                                    {% else %}
+                                                                        <a href="#" onclick="dm_add2cart($(this)); return false" data-product="{{product.slug}}">
+                                                                            <i class="icon-basket-loaded"></i>
+                                                                        </a>
+                                                                    {% endif %}
                                                                 </li>
                                                             {% elif product.variants and product.variants.count == 1 %}
                                                                 <li>
-                                                                    <a href="/" onclick="dm_add2cart_variant($(this)); return false" data-product="{{product.slug}}" data-variant="{{product.variants.first.product_code}}"><i class="icon-basket-loaded"></i></a>
+                                                                    {% if is_quotation %}
+                                                                        <a href="#" onclick="dm_add2quotation_variant($(this)); return false" data-product="{{product.product_code}}" data-variant="{{product.variants.first.product_code}}">
+                                                                            <i class="icon-basket-loaded"></i>
+                                                                        </a>
+                                                                    {% else %}
+                                                                        <a href="#" onclick="dm_add2cart_variant($(this)); return false" data-product="{{product.slug}}" data-variant="{{product.variants.first.product_code}}">
+                                                                            <i class="icon-basket-loaded"></i>
+                                                                        </a>
+                                                                    {% endif %}
                                                                 </li>
                                                             {% endif %}
                                                         </ul>
