--- a/apps/dmAdminTheme/templates/admin/index.html
+++ b/apps/dmAdminTheme/templates/admin/index.html
@@ -114,7 +114,7 @@
                             <span class="mdi mdi-alert-circle-outline"></span>
                         </div>
                         <div class="dm-adminshop-data">
-                            <p>{{ dshop_stocks.lowonstock }} {% if dshop_stocks.lowonstock > 1 %}{% trans "products" %}{% else %}{% trans "product" %}{% endif %}</p>
+                            <p><a href="/admindshop/product/?get_product_out_or_low=lowonstock">{{ dshop_stocks.lowonstock }} {% if dshop_stocks.lowonstock > 1 %}{% trans "products" %}{% else %}{% trans "product" %}{% endif %}</a></p>
                             <small>{% trans "is low on stock" %}</small>
                         </div>
                     </div>
@@ -123,7 +123,7 @@
                             <span class="mdi mdi-close-circle"></span>
                         </div>
                         <div class="dm-adminshop-data">
-                            <p>{{ dshop_stocks.outofstock }} {% if dshop_stocks.outofstock > 1 %}{% trans "products" %}{% else %}{% trans "product" %}{% endif %}</p>
+                            <p><a href="/admindshop/product/?get_product_out_or_low=outofstock">{{ dshop_stocks.outofstock }} {% if dshop_stocks.outofstock > 1 %}{% trans "products" %}{% else %}{% trans "product" %}{% endif %}</a></p>
                             <small>{% trans "is out of stock" %}</small>
                         </div>
                     </div>
