--- a/apps/dmAdminTheme/static/dmAdminTheme/css/admin.css
+++ b/apps/dmAdminTheme/static/dmAdminTheme/css/admin.css
@@ -10,6 +10,52 @@
     margin: 1rem 0 0 80px;
 }
 
+/* ===--- CSS Martin ---=== */
+.dashboard #content {
+    width: 800px;
+}
+#content-related {
+    width: 400px;
+    border-top: 30px solid black;
+    margin-right: -420px;
+}
+#header {
+    background-color: black;
+}
+#content-related h3 {
+    font-size: 18px;
+    font-weight: normal;
+    color: #447e9b;
+}
+#branding h1 {
+    color: white;
+}
+#branding h1, #branding h1 a:link, #branding h1 a:visited {
+    color: white;
+}
+.module h2, .module caption, .inline-group h2 {
+    background: black;
+}
+div.breadcrumbs {
+    background-color: grey;
+}
+.button.default, input[type=submit].default, .submit-row input.default {
+    background-color: black;
+}
+.parler-language-tabs span.current {
+    background-color: black;
+    border-color: black;
+}
+.parler-language-tabs {
+    border-bottom: 2px solid black;
+}
+.button, input[type=submit], input[type=button], .submit-row input, a.button {
+    background-color: black;
+}
+.button:active, input[type=submit]:active, input[type=button]:active, .button:focus, input[type=submit]:focus, input[type=button]:focus, .button:hover, input[type=submit]:hover, input[type=button]:hover {
+    background-color: grey;
+}
+
 /* ===--- Index: Analyze Block ---=== */
 #dm-analyze .dm-adminshop-row {
     border-bottom: 1px solid #ddd;
@@ -64,48 +110,15 @@
     display: block;
     margin: 0;
 }
-/* CSS Martin */
-.dashboard #content {
-    width: 800px;
+
+/* ===--- Product ---=== */
+form .form-row .field-variant_image .filer-dropzone {
+    padding: 1px;
 }
-#content-related {
-    width: 400px;
-    border-top: 30px solid black;
-    margin-right: -420px;
+form .form-row .field-variant_image .filer-dropzone.filer-dropzone-mobile .dz-message {
+    display: none;
+    margin-top: 0;
 }
-#header {
-    background-color: black;
-}
-#content-related h3 {
-    font-size: 18px;
-    font-weight: normal;
-    color: #447e9b;
-}
-#branding h1 {
-    color: white;
-}
-#branding h1, #branding h1 a:link, #branding h1 a:visited {
-    color: white;
-}
-.module h2, .module caption, .inline-group h2 {
-    background: black;
-}
-div.breadcrumbs {
-    background-color: grey;
-}
-.button.default, input[type=submit].default, .submit-row input.default {
-    background-color: black;
-}
-.parler-language-tabs span.current {
-    background-color: black;
-    border-color: black;
-}
-.parler-language-tabs {
-    border-bottom: 2px solid black;
-}
-.button, input[type=submit], input[type=button], .submit-row input, a.button {
-    background-color: black;
-}
-.button:active, input[type=submit]:active, input[type=button]:active, .button:focus, input[type=submit]:focus, input[type=button]:focus, .button:hover, input[type=submit]:hover, input[type=button]:hover {
-    background-color: grey;
+form .form-row .field-variant_image .filer-dropzone.filer-dropzone-mobile .filerFile {
+    top: 8px;
 }
