--- a/apps/dmAdminTheme/templates/admin/index.html
+++ b/apps/dmAdminTheme/templates/admin/index.html
@@ -1,5 +1,5 @@
 {% extends "admin/base_site.html" %}
-{% load i18n static dshopadmin_tags %}
+{% load i18n static dshopadmintheme_tags %}
 
 {% block extrastyle %}
     {{ block.super }}
